# huffman-compression

./: CMakeLists.txt  README.md  plik.txt
include/: Alfabet.h  BitReader.h  BitWriter.h  FileReader.h  Node.h  Symbol.h  Tree.h
src/: Alfabet.cpp  BitReader.cpp  BitWriter.cpp  FileReader.cpp  Node.cpp  Symbol.cpp  Tree.cpp  main.cpp
